--- a/src/main/resources/com/example/elektrocalc/hello-view.fxml
+++ b/src/main/resources/com/example/elektrocalc/hello-view.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="698.0" prefWidth="1012.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
    <children>
-      <Button id="Calc" layoutX="58.0" layoutY="220.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" text="Button" />
+      <Button id="Calc" layoutX="109.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" text="Button" />
       <GridPane layoutX="36.0" layoutY="113.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="28.0" />
@@ -24,9 +24,9 @@
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="U" GridPane.rowIndex="1" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="V" GridPane.rowIndex="2" />
-            <TextField id="I" GridPane.columnIndex="1" />
-            <TextField id="U" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField id="V" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField id="I" fx:id="I" GridPane.columnIndex="1" />
+            <TextField id="U" fx:id="U" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField id="V" fx:id="V" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="I" />
          </children>
       </GridPane>
