--- a/src/main/resources/com/example/elektrocalc/hello-view.fxml
+++ b/src/main/resources/com/example/elektrocalc/hello-view.fxml
@@ -1,34 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="698.0" prefWidth="1012.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
    <children>
-      <Button id="Calc" layoutX="109.0" layoutY="239.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" text="Button" />
-      <GridPane layoutX="36.0" layoutY="113.0">
+      <Button id="Calc" layoutX="43.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" prefHeight="64.0" prefWidth="116.0" text="Calculate" />
+      <GridPane layoutX="59.0" layoutY="34.0" prefHeight="192.0" prefWidth="200.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="28.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="10.0" prefWidth="172.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="85.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="10.0" prefWidth="28.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="U" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="V" GridPane.rowIndex="2" />
-            <TextField id="I" fx:id="I" GridPane.columnIndex="1" />
-            <TextField id="U" fx:id="U" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField id="V" fx:id="V" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="I" />
+            <Text fx:id="OneText" strokeType="OUTSIDE" strokeWidth="0.0" text="1" />
+            <Text fx:id="TwoText" strokeType="OUTSIDE" strokeWidth="0.0" text="2" GridPane.rowIndex="1" />
+            <Text fx:id="ThreeText" strokeType="OUTSIDE" strokeWidth="0.0" text="3" GridPane.rowIndex="2" />
+            <Text fx:id="FourText" strokeType="OUTSIDE" strokeWidth="0.0" text="4" GridPane.rowIndex="3" />
+            <Text fx:id="FiveText" strokeType="OUTSIDE" strokeWidth="0.0" text="5" GridPane.rowIndex="4" />
+            <Text fx:id="SixText" strokeType="OUTSIDE" strokeWidth="0.0" text="6" GridPane.rowIndex="5" />
+            <Text fx:id="SevenText" strokeType="OUTSIDE" strokeWidth="0.0" text="7" GridPane.rowIndex="6" />
+            <TextField fx:id="OneTextField" GridPane.columnIndex="1" />
+            <TextField fx:id="TwoTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="ThreeTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="FourTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="FiveTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="SixTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="SevenTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <RadioButton fx:id="OneRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" GridPane.columnIndex="2">
+               <toggleGroup>
+                  <ToggleGroup fx:id="CalcSelect" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <RadioButton fx:id="FourRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <RadioButton fx:id="SixRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="6" />
          </children>
       </GridPane>
+      <Text fx:id="Result" layoutX="190.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result" wrappingWidth="68.99999999999994" />
+      <Separator layoutX="23.0" layoutY="27.0" orientation="VERTICAL" prefHeight="315.0" prefWidth="8.0" />
+      <Separator layoutX="31.0" layoutY="341.0" prefWidth="200.0" />
+      <LineChart layoutX="31.0" layoutY="384.0" prefHeight="324.0" prefWidth="756.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
+      <ImageView fitHeight="145.0" fitWidth="178.0" layoutX="698.0">
+         <image>
+            <Image url="@../../../pictures/cutecat.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
