--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -63,7 +64,7 @@
       </GridPane>
       <Text fx:id="Result" layoutX="371.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="91.13330078125" />
       <Separator layoutX="23.0" layoutY="69.0" orientation="VERTICAL" prefHeight="315.0" prefWidth="8.0" />
-      <Separator layoutX="31.0" layoutY="382.0" prefWidth="200.0" />
+      <Separator layoutX="23.0" layoutY="391.0" prefWidth="200.0" />
       <LineChart layoutX="27.0" layoutY="423.0" prefHeight="324.0" prefWidth="756.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
@@ -76,5 +77,6 @@
       <Text layoutX="252.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result History" />
       <Text fx:id="Result1" layoutX="252.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Result:" wrappingWidth="105.60000000000008" />
       <Text layoutX="31.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables" />
+      <ComboBox fx:id="EquationSelect" layoutX="482.0" layoutY="104.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
