--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -63,8 +63,8 @@
          </children>
       </GridPane>
       <Text fx:id="Result" layoutX="371.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="91.13330078125" />
-      <Separator layoutX="23.0" layoutY="69.0" orientation="VERTICAL" prefHeight="315.0" prefWidth="8.0" />
-      <Separator layoutX="23.0" layoutY="391.0" prefWidth="200.0" />
+      <Separator layoutX="10.0" layoutY="72.0" orientation="VERTICAL" prefHeight="330.0" prefWidth="8.0" />
+      <Separator layoutX="14.0" layoutY="401.0" prefHeight="0.0" prefWidth="459.0" />
       <LineChart layoutX="27.0" layoutY="423.0" prefHeight="324.0" prefWidth="756.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
@@ -77,7 +77,7 @@
       <Text layoutX="252.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result History" />
       <Text fx:id="Result1" layoutX="252.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Result:" wrappingWidth="105.60000000000008" />
       <Text layoutX="31.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables" />
-      <ComboBox fx:id="EquationSelect" layoutX="508.0" layoutY="104.0" onAction="#handleComboSelect" prefWidth="150.0" />
-      <Text fx:id="currentEquation" layoutX="512.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="227.0" />
+      <ComboBox fx:id="EquationSelect" layoutX="508.0" layoutY="104.0" onAction="#handleComboSelect" prefHeight="19.0" prefWidth="227.0" />
+      <Text fx:id="currentEquation" layoutX="508.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="227.0" />
    </children>
 </AnchorPane>
