new tripple Hashmap

--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -49,17 +49,17 @@
             <TextField fx:id="FiveTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="SixTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="SevenTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <RadioButton fx:id="OneRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2">
+            <RadioButton fx:id="OneRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2">
                <toggleGroup>
                   <ToggleGroup fx:id="CalcSelect" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <RadioButton fx:id="FourRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <RadioButton fx:id="SixRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <RadioButton fx:id="FourRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <RadioButton fx:id="SixRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <Text fx:id="Result" layoutX="371.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="91.13330078125" />
