--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -6,23 +6,26 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="761.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="744.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
    <children>
-      <Button id="Calc" layoutX="50.0" layoutY="322.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" prefHeight="46.0" prefWidth="162.0" text="Calculate" />
-      <GridPane alignment="CENTER" cacheShape="false" layoutX="38.0" layoutY="104.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="189.0" prefWidth="200.0">
+      <Button id="Calc" layoutX="50.0" layoutY="371.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" prefHeight="42.0" prefWidth="178.0" text="Calculate" />
+      <GridPane alignment="CENTER" cacheShape="false" layoutX="30.0" layoutY="116.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="213.0" prefWidth="227.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="28.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="85.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="51.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="125.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="15.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="10.0" prefWidth="28.0" />
         </columnConstraints>
         <rowConstraints>
@@ -35,37 +38,35 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text fx:id="OneText" strokeType="OUTSIDE" strokeWidth="0.0" text="1" />
-            <Text fx:id="TwoText" strokeType="OUTSIDE" strokeWidth="0.0" text="2" GridPane.rowIndex="1" />
-            <Text fx:id="ThreeText" strokeType="OUTSIDE" strokeWidth="0.0" text="3" GridPane.rowIndex="2" />
-            <Text fx:id="FourText" strokeType="OUTSIDE" strokeWidth="0.0" text="4" GridPane.rowIndex="3" />
-            <Text fx:id="FiveText" strokeType="OUTSIDE" strokeWidth="0.0" text="5" GridPane.rowIndex="4" />
-            <Text fx:id="SixText" strokeType="OUTSIDE" strokeWidth="0.0" text="6" GridPane.rowIndex="5" />
-            <Text fx:id="SevenText" strokeType="OUTSIDE" strokeWidth="0.0" text="7" GridPane.rowIndex="6" />
-            <TextField fx:id="OneTextField" GridPane.columnIndex="1" />
+            <Text fx:id="OneText" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="57.0" />
+            <Text fx:id="TwoText" strokeType="OUTSIDE" strokeWidth="0.0" text="2" wrappingWidth="58.27099609375" GridPane.rowIndex="1" />
+            <Text fx:id="ThreeText" strokeType="OUTSIDE" strokeWidth="0.0" text="3" wrappingWidth="53.27099609375" GridPane.rowIndex="2" />
+            <Text fx:id="FourText" strokeType="OUTSIDE" strokeWidth="0.0" text="4" wrappingWidth="53.27099609375" GridPane.rowIndex="3" />
+            <Text fx:id="FiveText" strokeType="OUTSIDE" strokeWidth="0.0" text="5" wrappingWidth="47.27099609375" GridPane.rowIndex="4" />
+            <Text fx:id="SixText" strokeType="OUTSIDE" strokeWidth="0.0" text="6" wrappingWidth="50.27099609375" GridPane.rowIndex="5" />
+            <Text fx:id="SevenText" strokeType="OUTSIDE" strokeWidth="0.0" text="7" wrappingWidth="55.27099609375" GridPane.rowIndex="6" />
+            <TextField fx:id="OneTextField" prefHeight="24.0" prefWidth="87.0" GridPane.columnIndex="1" />
             <TextField fx:id="TwoTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="ThreeTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="FourTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="FiveTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="SixTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="SevenTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <RadioButton fx:id="OneRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2">
+            <RadioButton fx:id="OneRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" GridPane.columnIndex="3">
                <toggleGroup>
                   <ToggleGroup fx:id="CalcSelect" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <RadioButton fx:id="FourRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <RadioButton fx:id="SixRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <RadioButton fx:id="FourRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <RadioButton fx:id="SixRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="6" />
          </children>
       </GridPane>
-      <Text fx:id="Result" layoutX="371.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="91.13330078125" />
-      <Separator layoutX="10.0" layoutY="72.0" orientation="VERTICAL" prefHeight="330.0" prefWidth="8.0" />
-      <Separator layoutX="14.0" layoutY="401.0" prefHeight="0.0" prefWidth="459.0" />
-      <LineChart layoutX="27.0" layoutY="423.0" prefHeight="324.0" prefWidth="756.0">
+      <Text fx:id="Result" layoutX="293.0" layoutY="349.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="70.60000000000014" />
+      <LineChart layoutX="27.0" layoutY="423.0" prefHeight="293.0" prefWidth="684.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -73,11 +74,21 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </LineChart>
-      <TextArea fx:id="ResultHistory" layoutX="244.0" layoutY="103.0" prefHeight="190.0" prefWidth="227.0" />
-      <Text layoutX="252.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result History" />
-      <Text fx:id="Result1" layoutX="252.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Result:" wrappingWidth="105.60000000000008" />
-      <Text layoutX="31.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables" />
-      <ComboBox fx:id="EquationSelect" layoutX="508.0" layoutY="104.0" onAction="#handleComboSelect" prefHeight="19.0" prefWidth="227.0" />
-      <Text fx:id="currentEquation" layoutX="508.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="227.0" />
+      <TextArea fx:id="ResultHistory" layoutX="293.0" layoutY="75.0" prefHeight="243.0" prefWidth="91.0" />
+      <Text layoutX="293.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result History" />
+      <Text fx:id="Result1" layoutX="293.0" layoutY="334.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result:" wrappingWidth="70.60000000000008" />
+      <Text layoutX="30.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables" />
+      <ComboBox fx:id="EquationSelect" layoutX="27.0" layoutY="63.0" onAction="#handleComboSelect" prefHeight="24.0" prefWidth="227.0" promptText="Select Equation" />
+      <Text fx:id="currentEquation" layoutX="34.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="184.0">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text layoutX="433.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Definition" />
+      <TextArea fx:id="Definition" layoutX="433.0" layoutY="75.0" prefHeight="243.0" prefWidth="227.0" />
+      <ImageView fitHeight="101.0" fitWidth="151.0" layoutX="636.0" layoutY="-1.0">
+         <image>
+            <Image url="@cat.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
