--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -18,10 +16,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="798.0" prefWidth="1143.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="783.0" prefWidth="827.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.elektrocalc.Controller">
    <children>
-      <Button id="Calc" layoutX="50.0" layoutY="371.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" prefHeight="42.0" prefWidth="178.0" text="Calculate" />
-      <GridPane alignment="CENTER" cacheShape="false" layoutX="30.0" layoutY="116.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="213.0" prefWidth="227.0">
+      <Button id="Calc" layoutX="28.0" layoutY="354.0" mnemonicParsing="false" onAction="#handleCalcButtonAction" prefHeight="45.0" prefWidth="331.0" text="Calculate" />
+      <GridPane alignment="CENTER" cacheShape="false" layoutX="26.0" layoutY="132.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="213.0" prefWidth="331.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="51.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="125.0" />
@@ -65,30 +63,24 @@
             <RadioButton fx:id="SevenRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="6" />
          </children>
       </GridPane>
-      <Text fx:id="Result" layoutX="293.0" layoutY="349.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="70.60000000000014" />
-      <LineChart layoutX="27.0" layoutY="423.0" prefHeight="293.0" prefWidth="684.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
-      <TextArea fx:id="ResultHistory" layoutX="293.0" layoutY="75.0" prefHeight="243.0" prefWidth="128.0" />
-      <Text layoutX="293.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result History" />
-      <Text fx:id="Result1" layoutX="293.0" layoutY="334.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result:" wrappingWidth="70.60000000000008" />
-      <Text layoutX="30.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables" />
-      <ComboBox fx:id="EquationSelect" layoutX="27.0" layoutY="63.0" onAction="#handleComboSelect" prefHeight="24.0" prefWidth="227.0" promptText="Select Equation" />
-      <Text fx:id="currentEquation" layoutX="34.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="184.0">
-         <font>
-            <Font size="14.0" />
-         </font></Text>
-      <Text layoutX="433.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Definition" />
-      <TextArea fx:id="Definition" layoutX="433.0" layoutY="75.0" prefHeight="243.0" prefWidth="475.0" />
-      <ImageView fitHeight="173.0" fitWidth="184.0" layoutX="959.0" layoutY="14.0">
+      <TextArea fx:id="ResultHistory" layoutX="30.0" layoutY="487.0" prefHeight="250.0" prefWidth="331.0" />
+      <Text layoutX="30.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result History:" />
+      <Text fx:id="Result1" layoutX="30.0" layoutY="420.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result:" wrappingWidth="62.94970703125" />
+      <Text layoutX="23.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables:" />
+      <ComboBox fx:id="EquationSelect" layoutX="23.0" layoutY="22.0" onAction="#handleComboSelect" prefHeight="33.0" prefWidth="331.0" promptText="Select Equation" />
+      <Text layoutX="394.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Definition:" wrappingWidth="91.13330078125" />
+      <TextArea fx:id="Definition" layoutX="394.0" layoutY="135.0" prefHeight="345.0" prefWidth="415.0" />
+      <ImageView fitHeight="160.0" fitWidth="166.0" layoutX="643.0" layoutY="-11.0">
          <image>
             <Image url="@cat.png" />
          </image>
       </ImageView>
+      <Label fx:id="currentEquation" layoutX="23.0" layoutY="61.0" prefHeight="33.0" prefWidth="654.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="Result" layoutX="30.0" layoutY="415.0" prefHeight="45.0" prefWidth="290.0" />
+      <Button layoutX="228.0" layoutY="448.0" mnemonicParsing="false" onAction="#handleClearHistory" prefHeight="19.0" prefWidth="133.0" text="Clear Histroy" />
    </children>
 </AnchorPane>
