--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -69,7 +69,7 @@
       <Text layoutX="23.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Variables:" />
       <ComboBox fx:id="EquationSelect" layoutX="23.0" layoutY="22.0" onAction="#handleComboSelect" prefHeight="33.0" prefWidth="331.0" promptText="Select Equation" />
       <Text layoutX="394.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Definition:" wrappingWidth="91.13330078125" />
-      <TextArea fx:id="Definition" layoutX="394.0" layoutY="135.0" prefHeight="345.0" prefWidth="415.0" />
+      <TextArea fx:id="Definition" layoutX="394.0" layoutY="135.0" prefHeight="335.0" prefWidth="415.0" />
       <ImageView fitHeight="160.0" fitWidth="166.0" layoutX="643.0" layoutY="-11.0">
          <image>
             <Image url="@cat.png" />
@@ -82,5 +82,6 @@
       </Label>
       <Label fx:id="Result" layoutX="30.0" layoutY="415.0" prefHeight="45.0" prefWidth="290.0" />
       <Button layoutX="228.0" layoutY="448.0" mnemonicParsing="false" onAction="#handleClearHistory" prefHeight="19.0" prefWidth="133.0" text="Clear Histroy" />
+      <ImageView fx:id="drawing" fitHeight="250.0" fitWidth="415.0" layoutX="394.0" layoutY="487.0" />
    </children>
 </AnchorPane>
