--- a/src/main/resources/com/example/elektrocalc/app.fxml
+++ b/src/main/resources/com/example/elektrocalc/app.fxml
@@ -23,7 +23,8 @@
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="86.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="166.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="46.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="51.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.0" minWidth="10.0" prefWidth="34.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="10.0" prefWidth="29.0" />
         </columnConstraints>
         <rowConstraints>
@@ -50,17 +51,24 @@
             <TextField fx:id="FiveTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="SixTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="SevenTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <RadioButton fx:id="OneRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" GridPane.columnIndex="3">
+            <RadioButton fx:id="OneRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="112.0" textAlignment="RIGHT" GridPane.columnIndex="4">
                <toggleGroup>
                   <ToggleGroup fx:id="CalcSelect" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <RadioButton fx:id="FourRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <RadioButton fx:id="SixRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <RadioButton fx:id="TwoRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <RadioButton fx:id="ThreeRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <RadioButton fx:id="FourRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <RadioButton fx:id="FiveRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <RadioButton fx:id="SixRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+            <RadioButton fx:id="SevenRadio" mnemonicParsing="false" onAction="#handleCalcSelect" prefHeight="19.0" prefWidth="48.0" textAlignment="RIGHT" toggleGroup="$CalcSelect" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <Text fx:id="OneTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="26.0" GridPane.columnIndex="2" />
+            <Text fx:id="TwoTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="26.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Text fx:id="ThreeTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="92.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Text fx:id="FourTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="26.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Text fx:id="FiveTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="26.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Text fx:id="SixTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="26.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Text fx:id="SevenTextE" strokeType="OUTSIDE" strokeWidth="0.0" text="1" wrappingWidth="26.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <TextArea fx:id="ResultHistory" layoutX="30.0" layoutY="487.0" prefHeight="250.0" prefWidth="331.0" />
